-generate price
-add background, pixel stars