@@ -50,6 +50,9 @@
       <div class="dropdown-menu" aria-labelledby="weaponDrop1">
         <a class="dropdown-item" href="#">Any weapon</a>
         <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#">Basic melee</a>
+        <a class="dropdown-item" href="#">Advanced melee</a>
+        <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="#">Small arm</a>
         <a class="dropdown-item" href="#">Longarm</a>
         <a class="dropdown-item" href="#">Heavy</a>
